Diet management and some unit tests